<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Edit profile page -->
    <string name="edit_profile">Редактировать\nпрофиль</string>
    <string name="edit_profile_photo">Фото</string>
    <string name="edit_profile_name_user">Имя</string>
    <string name="edit_profile_enter_your_name">Введите ваше имя</string>
    <string name="edit_profile_last_name">Фамилия</string>
    <string name="edit_profile_сome_up_last_name">Введите вашу фамилию</string>
    <string name="edit_profile_save">Сохранить</string>

    <!-- Change password page -->
    <string name="change_password">Сменить пароль</string>
    <string name="change_password_old_password">Старый пароль</string>
    <string name="change_password_new_password">Новый пароль</string>
    <string name="change_password_repeat_new_password">Повторите новый пароль</string>
    <string name="change_password_enter_old_password">Введите старый пароль</string>
    <string name="change_password_enter_new_password">Введите новый пароль</string>
    <string name="change_password_enter_new_password_again">Повторите новый пароль</string>
    <string name="change_password_passwords_are_broken">Пароли должны совпадать</string>
    <string name="change_password_wrong_old_password">Старый пароль введен неверно</string>

    <!-- Profile -->
    <string name="profile_empty_field">Заполните все поля</string>
    <string name="profile_page_order_history">История заказов</string>
    <string name="profile_page_change_password">Изменить пароль</string>
    <string name="profile_page_log_out">Выйти из аккаунта</string>
    <string name="profile_page_name_last_name">Андрей Усанов</string>
    <string name="profile_page_email">taverna201@gmail.com</string>

    <!-- Orders -->
    <string name="orders_title">История заказов</string>
    <string name="orders_item_title">Заказ №%s</string>
    <string name="orders_history_empty_title">История пустая</string>
    <string name="orders_history_empty_subtitle">Совершите свой первый заказ!</string>
    <string name="orders_history_empty_button">В каталог</string>

    <!-- Order detail -->
    <string name="orders_detail_title">Заказ №%s</string>
</resources>