<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/space_7.5x" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/space_5x" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/space_5x" />

    <ImageView
        android:id="@+id/iv_back_button"
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:src="@drawable/icon_arrow"
        app:flow_horizontalBias="0.0"
        app:layout_constraintBottom_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toEndOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/gl_top"
        app:tint="@color/color_accent"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        style="@style/basic_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/change_password"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/gl_end"
        app:layout_constraintStart_toEndOf="@id/gl_start"
        app:layout_constraintTop_toTopOf="@id/gl_top" />

    <View
        android:id="@+id/v_empty"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_old_password"
        style="@style/black_style_roboto_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_9x"
        android:text="@string/change_password_old_password"
        android:textColor="@color/light_color_text"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_enter_old_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_2x"
        android:textColor="@color/color_accent"
        android:textColorHint="@color/icon_nav_not_selected"
        app:boxStrokeColor="@android:color/transparent"
        app:boxStrokeErrorColor="@android:color/transparent"
        app:endIconMode="password_toggle"
        app:endIconTint="@android:color/transparent"
        app:errorTextColor="@color/negative_rating"
        app:hintEnabled="false"
        app:layout_constraintEnd_toStartOf="@id/gl_end"
        app:layout_constraintStart_toEndOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/tv_old_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_old_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_background"
            android:gravity="center_vertical"
            android:hint="@string/change_password_enter_old_password"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/space_2x"
            android:paddingVertical="@dimen/space_2x"
            android:textColor="@color/color_accent"
            android:textColorHint="@color/tv_hint"
            android:textCursorDrawable="@null"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/v_empty_view_near_name"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintEnd_toStartOf="@id/tv_old_password"
        app:layout_constraintStart_toEndOf="@id/gl_start"
        app:layout_constraintTop_toTopOf="@id/til_enter_old_password" />

    <TextView
        android:id="@+id/tv_new_password"
        style="@style/black_style_roboto_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/space_16.5x"
        android:text="@string/change_password_new_password"
        android:textColor="@color/light_color_text"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/v_empty_view_near_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_enter_new_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_2x"
        android:hint="@string/edit_profile_сome_up_last_name"
        android:textColorHint="@color/color_accent"
        android:textSize="12sp"
        app:boxStrokeColor="@android:color/transparent"
        app:boxStrokeErrorColor="@android:color/transparent"
        app:endIconMode="password_toggle"
        app:errorTextColor="@color/negative_rating"
        app:hintEnabled="false"
        app:layout_constraintEnd_toStartOf="@id/gl_end"
        app:layout_constraintStart_toEndOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/tv_new_password"
        app:prefixTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_enter_new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_background"
            android:gravity="center_vertical"
            android:hint="@string/change_password_enter_new_password"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/space_2x"
            android:paddingVertical="@dimen/space_2x"
            android:textColor="@color/color_accent"
            android:textColorHint="@color/tv_hint"
            android:textCursorDrawable="@null"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_repeat_new_password"
        style="@style/black_style_roboto_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="170dp"
        android:text="@string/change_password_repeat_new_password"
        android:textColor="@color/light_color_text"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/v_empty_view_near_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_repeat_new_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_2x"
        android:hint="@string/change_password_repeat_new_password"
        android:textColorHint="@color/color_accent"
        android:textSize="12sp"
        app:boxStrokeColor="@android:color/transparent"
        app:boxStrokeErrorColor="@android:color/transparent"
        app:endIconMode="password_toggle"
        app:errorTextColor="@color/negative_rating"
        app:hintEnabled="false"
        app:layout_constraintEnd_toStartOf="@id/gl_end"
        app:layout_constraintStart_toEndOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/tv_repeat_new_password"
        app:prefixTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_repeat_new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_background"
            android:gravity="center_vertical"
            android:hint="@string/change_password_enter_new_password_again"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/space_2x"
            android:paddingVertical="@dimen/space_2x"
            android:textColor="@color/color_accent"
            android:textColorHint="@color/tv_hint"
            android:textCursorDrawable="@null"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/v_empty_view_near_nickname"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintEnd_toStartOf="@id/til_enter_new_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/til_enter_old_password" />

    <TextView
        android:id="@+id/tv_button_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/save_button_background"
        android:gravity="center"
        android:paddingVertical="@dimen/space_2x"
        android:text="@string/edit_profile_save"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_repeat_new_password"
        app:layout_constraintWidth_percent="0.55" />


    <include
        android:id="@+id/loading"
        layout="@layout/loading_fragment"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>