<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/space_7.5x" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/space_5x" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/space_5x" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cd_picture"
        android:layout_width="65dp"
        android:layout_height="65dp"
        app:cardCornerRadius="250dp"
        android:layout_marginTop="@dimen/space_5x"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        android:layout_marginLeft="@dimen/space_6x">

        <androidx.cardview.widget.CardView
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:cardCornerRadius="250dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/iv_picture"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_7x"
        android:background="@drawable/profile_card_background"
        android:paddingHorizontal="@dimen/space_5x"
        android:paddingVertical="@dimen/space_4x"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/gl_top">

        <ImageView
            android:id="@+id/iv_main_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:tint="@color/color_accent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_5x"
            android:text="@string/profile_page_name_last_name"
            android:textColor="@color/light_color_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iv_main_photo"
            app:layout_constraintStart_toEndOf="@id/iv_main_photo"
            app:layout_constraintTop_toTopOf="@id/iv_main_photo" />
        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_5x"
            android:text="@string/profile_page_email"
            android:textColor="@color/light_color_text"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toBottomOf="@id/iv_main_photo"
            app:layout_constraintStart_toEndOf="@id/iv_main_photo"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />
        <ImageView
            android:id="@+id/iv_pencil"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:layout_marginEnd="@dimen/space_3x"
            android:layout_marginLeft="180dp"
            android:src="@drawable/pencil_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:tint="@color/color_accent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/history_order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_7x"
        android:background="@drawable/profile_card_background"
        android:paddingHorizontal="@dimen/space_5x"
        android:paddingVertical="@dimen/space_4x"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/main_activity">

        <ImageView
            android:id="@+id/iv_history_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/carting_shop_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:tint="@color/color_accent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_5x"
            android:text="@string/profile_page_order_history"
            android:textColor="@color/light_color_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iv_history_order"
            app:layout_constraintStart_toEndOf="@id/iv_history_order"
            app:layout_constraintTop_toTopOf="@id/iv_history_order" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_change_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_7x"
        android:background="@drawable/profile_card_background"
        android:paddingHorizontal="@dimen/space_5x"
        android:paddingVertical="@dimen/space_4x"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/history_order">

        <ImageView
            android:id="@+id/iv_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/lock_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/color_accent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_7x"
            android:text="@string/profile_page_change_password"
            android:textColor="@color/light_color_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iv_lock"
            app:layout_constraintStart_toEndOf="@id/iv_lock"
            app:layout_constraintTop_toTopOf="@id/iv_lock" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_log_out"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_7x"
        android:background="@drawable/profile_card_background"
        android:paddingHorizontal="@dimen/space_5x"
        android:paddingVertical="@dimen/space_4x"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/cl_change_password">

        <ImageView
            android:id="@+id/iv_log_out_door"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/log_out_image"
            app:layout_constraintHeight="20dp"
            app:layout_constraintWidth="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/color_accent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_6x"
            android:text="@string/profile_page_log_out"
            android:textColor="@color/light_color_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iv_log_out_door"
            app:layout_constraintStart_toEndOf="@id/iv_log_out_door"
            app:layout_constraintTop_toTopOf="@id/iv_log_out_door" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <include
        android:id="@+id/loading"
        layout="@layout/loading_fragment"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>